# nagisa

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  llms.txt  release.toml
.github/workflows/: ci.yml  release.yml
crates/nagisa/: Cargo.toml  release.toml
crates/nagisa-core/: Cargo.toml
crates/nagisa-core/src/: args.rs  bot.rs  cooldown.rs  ctx.rs  dispatch.rs  enabled.rs  event_trigger.rs  extract.rs  framesource.rs  handler.rs  impl_info.rs  lib.rs  matcher.rs  middleware.rs  plugin.rs  ratelimit.rs  reconnect.rs  refs.rs  registry.rs  rendezvous.rs  router.rs  rule.rs  service.rs  session.rs  slots.rs  source.rs  sse.rs  wire.rs
crates/nagisa-core/src/invoker/: milky.rs  mod.rs  onebot.rs
crates/nagisa-log/: Cargo.toml
crates/nagisa-log/src/: bus.rs  fields.rs  format.rs  init.rs  lib.rs  messages.rs  names.rs  observer.rs  render.rs
crates/nagisa-macros/: Cargo.toml
crates/nagisa-macros/src/: args_derive.rs  attrs.rs  lib.rs  plugin.rs  slots.rs  trigger.rs
crates/nagisa-milky/: Cargo.toml
crates/nagisa-milky/src/: actions.rs  config.rs  encode.rs  lib.rs  sources.rs  transport.rs  webhook.rs  wire.rs
crates/nagisa-milky/src/decode/: entity.rs  message.rs  mod.rs  notice.rs  request.rs  segment.rs
crates/nagisa-onebot/: Cargo.toml
crates/nagisa-onebot/src/: encode.rs  http_post.rs  lib.rs  reverse_ws.rs  wire.rs
crates/nagisa-onebot/src/adapter/: api.rs  config.rs  inbound.rs  mod.rs  onebot.rs
crates/nagisa-onebot/src/decode/: message.rs  meta_request.rs  mod.rs  notice.rs  segment.rs
crates/nagisa-render/: Cargo.toml  README.md
crates/nagisa-render/assets/fonts/: JetBrainsMono-Italic.ttf.zst  JetBrainsMono.ttf.zst
crates/nagisa-render/examples/: gallery.rs
crates/nagisa-render/src/: build.rs  canvas.rs  error.rs  font.rs  highlight.rs  layout.rs  lib.rs  markup.rs  model.rs  paint.rs  theme.rs
crates/nagisa-render/src/markup/: attrs.rs  inline.rs
crates/nagisa-types/: Cargo.toml
crates/nagisa-types/src/: capability.rs  context.rs  entity.rs  error.rs  event.rs  id.rs  lib.rs  message.rs  resource.rs  segment.rs  vendor.rs
crates/nagisa/examples/: echo_bot.rs  event_plugin.rs  plugin_switches.rs  token_bind.rs  word_guess.rs
crates/nagisa/src/: app.rs  lib.rs
