[package]
name = "nagisa-macros"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nagisa proc-macros: #[command] / #[event] / plugin! / derive(Args, Slots, ArgEnum)"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
