[package]
name = "nagisa-milky"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nagisa Milky 1.2 protocol adapter (targets Lagrange.Milky / LLOneBot)"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "json", "tokio"] }
futures-util = { workspace = true }
nagisa-core = { workspace = true }
nagisa-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
url = { workspace = true }

