[package]
name = "nagisa-onebot"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nagisa OneBot v11 protocol adapter (targets Lagrange.OneBot / NapCat / LLOneBot)"

[dependencies]
async-trait = { workspace = true }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
hmac = "0.13.0"
nagisa-core = { workspace = true }
nagisa-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = "0.11.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
url = { workspace = true }
