[package]
name = "nagisa-render"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "nagisa 的文本排版引擎:标记/构建器文档 → 图片"

[dependencies]
cosmic-text = { workspace = true }
image = { workspace = true, features = ["png", "webp"] }
ruzstd = { workspace = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
