[package]
name = "nagisa-render"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Nagisa typesetting engine: markup / builder documents to images (PNG / WebP)"

[dependencies]
cosmic-text = { workspace = true }
image = { workspace = true, features = ["png", "webp", "jpeg", "gif"] }
ruzstd = { workspace = true }
thiserror = { workspace = true }
tiny-skia = { workspace = true }
unicode-properties = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
